# moscow-zoo-bot

./: .env.local.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Admin/: db.json  db.sqlite3  requirements.txt
Admin/Admin/: settings.py  urls.py
Admin/api/: admin.py  models.py  urls.py  views.py
Admin/apiBase/: views.py
Admin/config/: settings.py  urls.py
Bot/: app.py  config.py
Bot/core/handlers/: Club_friend.py  Guide.py  Home.py  MenuButtons.py  QRCode.py  base.py  map.py
Bot/core/keyboards/: Club_friend.py  Home.py
Bot/core/utils/: QRCodeReader.py
Bot/src/handler/: Feedback.py
Bot/src/keyboards/: Enum.py  keyboards.py
Parser/: crow.py
