[tool.poetry]
name = "moscow-zoo-bot"
version = "0.1.0"
description = ""
authors = ["AiorNerok <90855034+AiorNerok@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "moscow_zoo_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
aiogram = "^2.25.1"
selenium = "^4.9.1"
bs4 = "^0.0.1"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
