[tool.poetry]
name = "moscow-zoo-bot"
version = "0.1.0"
description = ""
authors = ["AiorNerok <90855034+AiorNerok@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "moscow_zoo_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
aiogram = "3.0.0b7"
selenium = "^4.9.1"
bs4 = "^0.0.1"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"
pybabel = "^0.0.0.dev0"
numpy = "^1.24.3"
pyzbar = "^0.1.9"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
